event tracking left to do and maybe sky and floor

--- a/libgraph/Makefile
+++ b/libgraph/Makefile
@@ -3,7 +3,7 @@ SRC = libgraph.c
 SRC_PATH = srcs
 OBJ_PATH = objs
 OBJ = $(SRC:%.c=$(OBJ_PATH)/%.o)
-FLAGS = -Werror -Wextra -Wall -Iinclude 
+FLAGS = -Werror -Wextra -Wall -Iinclude -O3
 
 all : $(NAME)
 
