--- a/libmymath/Makefile
+++ b/libmymath/Makefile
@@ -1,9 +1,9 @@
 NAME = libmymath.a
-SRC = libmymath.c
+SRC = libmymath.c libmymath2.c
 SRC_PATH = srcs
 OBJ_PATH = objs
 OBJ = $(SRC:%.c=$(OBJ_PATH)/%.o)
-FLAGS = -Werror -Wextra -Wall -Iinclude
+FLAGS = -Werror -Wextra -Wall -Iinclude -O3
 
 all : $(NAME)
 
