finished sort of

--- a/libgraph/Makefile
+++ b/libgraph/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: esuits <marvin@42.fr>                      +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2018/10/07 18:29:31 by esuits            #+#    #+#              #
+#    Updated: 2018/10/07 18:29:33 by esuits           ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = libgraph.a
 SRC = libgraph.c
 SRC_PATH = srcs
