--- a/libmymath/Makefile
+++ b/libmymath/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: esuits <marvin@42.fr>                      +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2018/10/07 18:29:41 by esuits            #+#    #+#              #
+#    Updated: 2018/10/07 18:29:42 by esuits           ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = libmymath.a
 SRC = libmymath.c libmymath2.c
 SRC_PATH = srcs
