--- a/libvec2/Makefile
+++ b/libvec2/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: esuits <marvin@42.fr>                      +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2018/10/07 18:29:48 by esuits            #+#    #+#              #
+#    Updated: 2018/10/07 18:29:50 by esuits           ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = libvec2.a
 SRC = libvec2.c libvec2_1.c
 SRC_PATH = srcs
